# rag-intermediate

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
litellm/: config.yaml
src/: chunk.py  config.py  embed.py  ingest.py  main.py  query.py  server.py
src/resources/: scottish-history.txt
