[project]
name = "do-rag"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "watchdog==6.0.0",
    "psycopg[binary]>=3.1",
    "aiofiles==25.1.0",
    "langchain==1.3.10",
    "langchain-text-splitters==1.1.2",
    "langchain-ollama==1.1.0",
    "langchain-postgres>=0.0.17",
    "langchain-openai>=1.3.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
